# nanoCHIP8

./: .gitignore  CMakeLists.txt  README.md  flake.nix
devlog/: 2023-06-09.md
src/frontend/: main.cpp
src/runtime/: runtime.cpp
